--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node index.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --output-path angularapp  --aot --prod"
+  },
+  "engines": {
+    "node": "v12.10.0",
+    "npm": "6.10.3"
   },
   "private": true,
   "dependencies": {
@@ -27,6 +32,7 @@
     "bootstrap": "^4.4.1",
     "datatables.net": "^1.10.21",
     "datatables.net-dt": "^1.10.21",
+    "express": "^4.17.1",
     "firebase": "^7.14.2",
     "jquery": "^3.5.1",
     "ngx-cookie-service": "^3.0.4",
