--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "firebase": "^7.14.2",
     "jquery": "^3.5.1",
     "ngx-cookie-service": "^3.0.4",
+    "ngx-moment": "^4.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
